<resources>
    <string name="app_name">DavidSicilylines</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->


    <!-- Strings TEXT -->

    <string name="title">Sicilylines</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="email">E-mail :</string>
    <string name="mdp">Mot de passe :</string>
    <string name="adresse">Adresse :</string>
    <string name="ville">Ville : </string>
    <string name="msgmodifvalid">Les modifications que vous avez apportées à vos informations ont été enregistrées/modifiées. </string>
    <string name="messageconfirm">Vos informations ont bien été modifié.</string>


    <!-- Saisir -->

    <string name="Snom">Saisir votre nom</string>
    <string name="Sprenom">Saisir votre prénom</string>
    <string name="Semail">Saisir votre e-mail</string>
    <string name="Smdp">Saisir votre mot de passe</string>
    <string name="Sadresse">Saisir votre adresse</string>
    <string name="Sville">Saisir votre ville</string>
    <string name="Smdprandom">*****************</string>

    <!-- Bouton -->

    <string name="valider">Valider</string>
    <string name="modif">Modifier ses informations</string>
    <string name="list">Lister ses réservations</string>
    <string name="deco">Déconnecter</string>
    <string name="retour">Retour</string>
    <string name="connection">Connection</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
</resources>