<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListRes">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="64dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/buttonDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDeco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDeco"
        app:layout_constraintTop_toTopOf="@+id/buttonDeco" />
</androidx.constraintlayout.widget.ConstraintLayout>